--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
-  "name": "angular-basic",
+  "name": "sunny-portal",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "start": "npm run start:shell",
+    "start:shell": "ng serve shell  -o --port 5555",
+    "start:ach": "ng serve ach -o --port 3333",
+    "start:all": " npm run start:shell npm run start:ach",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.3",
-    "@angular/common": "~11.2.3",
-    "@angular/compiler": "~11.2.3",
-    "@angular/core": "~11.2.3",
-    "@angular/forms": "~11.2.3",
-    "@angular/platform-browser": "~11.2.3",
-    "@angular/platform-browser-dynamic": "~11.2.3",
-    "@angular/router": "~11.2.3",
-    "rxjs": "~6.6.6",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "@angular-architects/module-federation": "^12.4.0",
+    "@angular-architects/module-federation-tools": "^12.4.0",
+    "@angular/animations": "~12.1.2",
+    "@angular/cdk": "^12.2.0",
+    "@angular/common": "~12.1.2",
+    "@angular/compiler": "~12.1.2",
+    "@angular/core": "~12.1.2",
+    "@angular/elements": "^12.2.3",
+    "@angular/forms": "~12.1.2",
+    "@angular/material": "^12.2.0",
+    "@angular/platform-browser": "~12.1.2",
+    "@angular/platform-browser-dynamic": "~12.1.2",
+    "@angular/router": "~12.1.2",
+    "@azure/msal-angular": "^2.0.2",
+    "@azure/msal-browser": "^2.16.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.2.0",
+    "webpack": "^5.36.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.2",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "~11.2.3",
-    "@angular/language-service": "~11.2.3",
+    "@angular-devkit/build-angular": "~12.1.4",
+    "@angular/cli": "~12.1.2",
+    "@angular/compiler-cli": "~12.1.2",
+    "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.3.2"
   }
 }
